--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ django-classy-tags==0.3.4.1
 django-taggit==0.9.3
 django-taggit-templatetags==0.4.6dev
 django-templatetag-sugar==0.1
+django-nose
+python-faker
+factory-boy
