--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
-Django==1.5.1
-Markdown==2.2.0
+Django==1.6.1
+Markdown==2.3.1
 akismet==0.2.0
-django-classy-tags==0.3.4.1
-django-taggit==0.9.3
+django-classy-tags==0.4
+django-taggit==0.11.2
 django-taggit-templatetags==0.4.6dev
 django-templatetag-sugar==0.1
-django-nose
-python-faker
-factory-boy
+django-nose==1.2
+python-faker==0.2.4
+factory-boy==2.3.0
+South==0.8.4
+raven==3.6.1
+django-localflavor
+Pillow
