--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
-Django==1.4.15
-Markdown==2.2.0
-akismet==0.2.0
-django-classy-tags==0.3.4.1
-django-taggit==0.9.3
+akismet==1.0.1
+Django==1.11.20
+django-classy-tags==0.8.0
+django-localflavor==2.1.0
+django-filter==1.1.0
+django-taggit==0.24.0
 django-taggit-templatetags==0.4.6dev
-django-templatetag-sugar==0.1
+Markdown==3.1
+pytz==2019.1
+
